Correção de teste unitário e conexão com o EJB